--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Soundboard</h1>
     <div class="soundboard">
-        <button id="b1"></button>
-        <button id="b2"></button>
-        <button id="b3"></button>
+        <button id="b1">Percussion</button>
+        <button id="b2">Snare</button>
+        <button id="b3">Cymbal</button>
     </div>
     <script src="soundboard.js"></script>
 </body>
