--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Soundboard</h1>
     <div class="soundboard">
-        <button id="b1">Percussion</button>
+        <button id="b1">Bass</button>
         <button id="b2">Snare</button>
         <button id="b3">Cymbal</button>
     </div>
