--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <button id="b1">Bass</button>
         <button id="b2">Snare</button>
         <button id="b3">Cymbal</button>
+        <button id="b4">Guitar</button>
+        <button id="b5">Accordian</button>
+        <button id="b6">Flute</button>
     </div>
     <script src="soundboard.js"></script>
 </body>
